# routes/website/attachments.php
@@ -3,5 +3,9 @@
 use App\Http\Controllers\AttachmentController;
 use Illuminate\Support\Facades\Route;
 
-Route::apiResource('attachments', AttachmentController::class);
-
+Route::middleware('auth:sanctum')->group(function () {
+    
+    Route::middleware('role:superadmin')->group(function () {
+        Route::apiResource('attachments', AttachmentController::class);
+    });
+});
